test/checker/register/invalid/duplicate_field.km
module DuplicateField;

type Foo {
    Bar: Integer,
    Baz: Natural,
    Bar: String
};
